--- a/atom/atom.symlink/styles.less
+++ b/atom/atom.symlink/styles.less
@@ -7,3 +7,16 @@
 .tree-view .entry.file.status-modified {
   font-weight: bold;
 }
+
+// Make material-ui sidebar a bit tighter
+.tree-view {
+  .name.icon::before {
+    margin-right: .5rem;
+  }
+  .list-tree {
+    li:not(.list-nested-item):not(.tabBlender),
+    li.list-nested-item > .list-item {
+      line-height: 2.25;
+    }
+  }
+}
