--- a/atom/atom.symlink/styles.less
+++ b/atom/atom.symlink/styles.less
@@ -20,3 +20,17 @@
     }
   }
 }
+
+// Show solid VCS dot on left of tab-bar if file is modified but not saved
+.tab-bar {
+  .tab .title[class*="status-"] {
+    padding-left: 1.2rem;
+  }
+  .tab .title::after {
+    display: none;
+    opacity: .7;
+  }
+  .tab.modified .title::after {
+    display: block;
+  }
+}
