--- a/atom/atom.symlink/styles.less
+++ b/atom/atom.symlink/styles.less
@@ -9,9 +9,10 @@
 }
 
 // Make material-ui sidebar a bit tighter
-.tree-view {
+.atom-dock-inner {
+  .list-nested-item > .list-item::before,
   .name.icon::before {
-    margin-right: .5rem;
+    margin-right: .25rem !important;
   }
   .list-tree {
     li:not(.list-nested-item):not(.tabBlender),
@@ -33,4 +34,13 @@
   .tab.modified .title::after {
     display: block;
   }
+}
+
+// reduce padding in tree view
+.list-tree.has-collapsable-children .list-nested-item > .list-tree > li,
+.list-tree.has-collapsable-children .list-nested-item > .list-group > li {
+  padding-left: 14px;
+}
+.list-tree.has-collapsable-children li.list-item {
+  margin-left: 14px;
 }
